# SimpleORM

./: CMakeLists.txt  Column.h  Database.cpp  Database.h  Engine.cpp  Engine.h  README.md  Table.cpp  Table.h  configformat.md  main.cpp  test.cpp  testconf.txt  testdb.txt
